--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+#we can use this to dynamically allocate values
+#example: now our server will start at 8585
+server.port=8585 
+#create values like
+developer.name=Vivek Murarka
