--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,16 @@
 server.port=8585 
 #create values like
 developer.name=Vivek Murarka
+
+
+
+#expose endpoints that are part of actuator
+management.endpoints.web.exposure.include=*
+
+#enable /actuator/info to take data from application.properties files
+management.info.env.enabled=true
+
+#information displayed for /actuator/info
+info.app.name = Springboot app
+info.app.description= Tutorial for spring boot
+info.app.version = 1.0.0
