--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,19 @@
+#By default, spring reads information from application.properties files located under src/main/resources
 #we can use this to dynamically allocate values
 #example: now our server will start at 8585
-server.port=8585 
-#create values like
+server.port=8585
+#This becomes the base url
+server.servlet.context-path=/learning
+#Session timeout
+server.servlet.session.timeout=15m
+
+
+#Spring security
+spring.security.user.name=admin
+spring.security.user.password=password
+spring.security.user.roles=admin
+
+#create custom values like this and access in controller using @Value
 developer.name=Vivek Murarka
 
 
@@ -16,3 +28,10 @@ management.info.env.enabled=true
 info.app.name = Springboot app
 info.app.description= Tutorial for spring boot
 info.app.version = 1.0.0
+
+#JDBC properties
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false$serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=pw
+
+
