--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.security.user.name=admin
 spring.security.user.password=password
 spring.security.user.roles=admin
 
+
 #create custom values like this and access in controller using @Value
 developer.name=Vivek Murarka
 
@@ -30,8 +31,8 @@ info.app.description= Tutorial for spring boot
 info.app.version = 1.0.0
 
 #JDBC properties
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false$serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=pw
-
 
