Spring boot: Exception handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ server.servlet.session.timeout=15m
 
 
 #Spring security
-spring.security.user.name=admin
-spring.security.user.password=password
-spring.security.user.roles=admin
+#spring.security.user.name=admin
+#spring.security.user.password=password
+#spring.security.user.roles=admin
 
 
 #create custom values like this and access in controller using @Value
