Spring boot: Security with JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,16 @@ server.servlet.session.timeout=15m
 
 
 #Spring security
-#spring.security.user.name=admin
-#spring.security.user.password=password
+spring.security.user.name=admin
+spring.security.user.password=password
 #spring.security.user.roles=admin
+#Spring Security filters are registered with the lowest order and are the first filters invoked.
+#For some use cases, if you want to put your custom filter in front of them, you will need to add padding to their order.
+# here we can add 9 custom filter
+spring.security.filter.order=10
+
+security.jwt.token.secret-key=MySecretKeyShouldBeAtleast256Bits
+security.jwt.token.expire-length=3600000
 
 
 #create custom values like this and access in controller using @Value
